--- a/public/style.css
+++ b/public/style.css
@@ -246,7 +246,7 @@ input[type=radio]:checked ~ .o  {
     display: none;
     width: 100dvw;
     height: 100dvh;
-    background-color: red;
+    background-color: var(--bg-secondary);
 }
 
 /*  PAUSE CONTAINER >>>>>>>>>>>>>>>>>>>> */
@@ -273,4 +273,8 @@ input[type=radio]:checked ~ .o  {
     -webkit-backdrop-filter: blur(5px);
     -moz-backdrop-filter: blur(5px);
     backdrop-filter: blur(5px);
+}
+
+.pause-container ul {
+    list-style-type: none;
 }
