--- a/views/fake.ejs
+++ b/views/fake.ejs
@@ -1,7 +1,12 @@
 <%- include('header.ejs') %>
+<%- include('pause.ejs') %>
 
-<div class="fake-container">
-    PHONY!!
+<div class="main-container">
+    <div class="fake-container">
+        PHONY!!
+    </div>
 </div>
+
+<script src="/src/fake.js"></script>
 
 <%- include('footer.ejs') %>
