--- a/views/keyboard.ejs
+++ b/views/keyboard.ejs
@@ -1,4 +1,5 @@
 <%- include('header.ejs') %>
+<%- include('pause.ejs') %>
 <!-- KEYBOARD -->
 
 <div class="main-container">
@@ -47,5 +48,5 @@
     </div>
 </div>
 </div>
-
+<script type="module" src="/src/keyboard.js"></script>
 <%- include('footer.ejs') %>
