refactored typingTest functionality

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -142,7 +142,7 @@ input[type=radio]:checked ~ .o  {
 /* TEXT AREA >>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
 
 .type-container {
-    display: none;
+    display: flex;
 }
 
 .wpm-area {
