--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -1,6 +1,9 @@
 
 <%- include('header.ejs') %>
 <div class="main-container">
+    <div class="loading">
+        THIS IS LOADING
+    </div>
     <div class="menu-container">
         <!-- <div>Press a number</div> -->
         <div class="list-wrapper">
