added loading screen animation

--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -1,9 +1,18 @@
 
 <%- include('header.ejs') %>
-<div class="main-container">
-    <div class="loading">
-        THIS IS LOADING
+<div class="loading">
+    <div class="loading-keyboard-container">
+        <div class="loading-keys-lane">
+            <div class="key l">L</div>
+            <div class="key o">O</div>
+            <div class="key a">A</div>
+            <div class="key d">D</div>
+            <div class="key i">I</div>
+            <div class="key n">N</div>
+            <div class="key g">G</div>
+        </div>
     </div>
+</div>
     <div class="menu-container">
         <!-- <div>Press a number</div> -->
         <div class="list-wrapper">
@@ -49,8 +58,8 @@
         </div>
     </div>
 
-</div>
 
 <script src="/src/menu.js"></script>
+<!-- <script src="/src/loading.js"></script> -->
 
 <%- include('footer.ejs') %>
