--- a/public/style/loading.css
+++ b/public/style/loading.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap');
 
-:root {
+/* :root {
     --bg-primary: #131313;
     --bg-secondary: #282828;
 
@@ -14,30 +14,75 @@
     --ff-font: 'Fira Code', Courier, monospace;
     --ff-color: #646464;
     /* --ff-color-select: #0DFF92; */
-    --ff-color-select: #ebdbb2;
+    /* --ff-color-select: #ebdbb2;
     --ff-color-correct: #ebdbb2;
+} */
+
+.loading-keyboard-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    padding: 3%;
+    transition: 3s cubic-bezier(0.6, 0.04, 0.98, 0.335) 1s;
 }
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+.loading-keys-lane {
+    display: flex;
+    justify-content: center;
+
+    margin: 1px 0px;
+    transition: 10s;
 }
 
-body {
-    background-color: var(--bg-secondary);
-}
+/* .key {
+    color: var(--key-primary);
+    font-family: var(--ff-font);
+    font-weight: 600;
+    font-size: var(--ff-size);
+
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 50px;
+    height: 50px;
+    margin: 5px;
+
+    border: 2px solid var(--key-primary);
+    border-radius: 5px;
+
+    transition: display 1s ease-in;
+} */
 
 .loading {
     display: none;
     justify-content: center;
     align-items: center;
 
+    font-size: var(--ff-size);
+    font-family: var(--ff-font);
+    /* color: var(--ff-color-select); */
+
     width: 100dvw;
     height: 100dvh;
     position: absolute;
+    background-color: var(--bg-secondary);
 
-    font-size: var(--ff-size);
-    font-family: var(--ff-font);
-    color: var(--ff-color-select);
 }
+/* .fade {
+    opacity: 0;
+} */
+
+
+.chosen {
+    background-color: #ebdbb2;
+    transform: scale(1.07);
+    transition: transform 1s ease-in-out, background-color 1s ease-in-out;
+}
+
+/* .chosen.fade{
+    opacity: 1;
+    transition: opacity 1s ease-out;
+} */
