--- a/views/fake.ejs
+++ b/views/fake.ejs
@@ -1,5 +1,4 @@
 <%- include('header.ejs') %>
-<%- include('pause.ejs') %>
 
 <div class="main-container">
     <div class="fake-container">
@@ -7,6 +6,7 @@
     </div>
 </div>
 
-<script src="/src/fake.js"></script>
+<%- include('pause.ejs') %>
+<script src="/src/scripts/fake.js"></script>
 
 <%- include('footer.ejs') %>
