--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -59,7 +59,6 @@
     </div>
 
 
-<script src="/src/menu.js"></script>
-<!-- <script src="/src/loading.js"></script> -->
+<script src="/src/scripts/menu.js"></script>
 
 <%- include('footer.ejs') %>
