--- a/views/keyboard.ejs
+++ b/views/keyboard.ejs
@@ -1,52 +1,52 @@
 <%- include('header.ejs') %>
-<%- include('pause.ejs') %>
 <!-- KEYBOARD -->
 
 <div class="main-container">
-<div class="keyboard-container">
-    <div class="keys-lane qwe">
-        <div class="key q" id="KeyQ">Q</div>
-        <div class="key w" id="KeyW">W</div>
-        <div class="key e" id="KeyE">E</div>
-        <div class="key r" id="KeyR">R</div>
-        <div class="key t" id="KeyT">T</div>
-        <div class="key y" id="KeyY">Y</div>
-        <div class="key u" id="KeyU">U</div>
-        <div class="key i" id="KeyI">I</div>
-        <div class="key o" id="KeyO">O</div>
-        <div class="key p" id="KeyP">P</div>
-        <div class="key BracketLeft" id="BracketLeft">[</div>
-        <div class="key BracketRight" id="BracketRight">]</div>
-    </div>
-    <div class="keys-lane asd">
-        <div class="key a" id="KeyA">A</div>
-        <div class="key s" id="KeyS">S</div>
-        <div class="key d" id="KeyD">D</div>
-        <div class="key f" id="KeyF">F</div>
-        <div class="key g" id="KeyG">G</div>
-        <div class="key h" id="KeyH">H</div>
-        <div class="key j" id="KeyJ">J</div>
-        <div class="key k" id="KeyK">K</div>
-        <div class="key l" id="KeyL">L</div>
-        <div class="key Semicolon" id="Semicolon">;</div>
-        <div class="key Quote" id="Quote">'</div>
-    </div>
-    <div class="keys-lane zxc">
-        <div class="key z" id="KeyZ">Z</div>
-        <div class="key x" id="KeyX">X</div>
-        <div class="key c" id="KeyC">C</div>
-        <div class="key v" id="KeyV">V</div>
-        <div class="key b" id="KeyB">B</div>
-        <div class="key n" id="KeyN">N</div>
-        <div class="key m" id="KeyM">M</div>
-        <div class="key Comma" id="Comma">,</div>
-        <div class="key Period" id="Period">.</div>
-        <div class="key Slash" id="Slash">/</div>
-    </div>
-    <div class="keys-lane key spacekey" id="Space">
-        SPACE
+    <div class="keyboard-container">
+        <div class="keys-lane qwe">
+            <div class="key q" id="KeyQ">Q</div>
+            <div class="key w" id="KeyW">W</div>
+            <div class="key e" id="KeyE">E</div>
+            <div class="key r" id="KeyR">R</div>
+            <div class="key t" id="KeyT">T</div>
+            <div class="key y" id="KeyY">Y</div>
+            <div class="key u" id="KeyU">U</div>
+            <div class="key i" id="KeyI">I</div>
+            <div class="key o" id="KeyO">O</div>
+            <div class="key p" id="KeyP">P</div>
+            <div class="key BracketLeft" id="BracketLeft">[</div>
+            <div class="key BracketRight" id="BracketRight">]</div>
+        </div>
+        <div class="keys-lane asd">
+            <div class="key a" id="KeyA">A</div>
+            <div class="key s" id="KeyS">S</div>
+            <div class="key d" id="KeyD">D</div>
+            <div class="key f" id="KeyF">F</div>
+            <div class="key g" id="KeyG">G</div>
+            <div class="key h" id="KeyH">H</div>
+            <div class="key j" id="KeyJ">J</div>
+            <div class="key k" id="KeyK">K</div>
+            <div class="key l" id="KeyL">L</div>
+            <div class="key Semicolon" id="Semicolon">;</div>
+            <div class="key Quote" id="Quote">'</div>
+        </div>
+        <div class="keys-lane zxc">
+            <div class="key z" id="KeyZ">Z</div>
+            <div class="key x" id="KeyX">X</div>
+            <div class="key c" id="KeyC">C</div>
+            <div class="key v" id="KeyV">V</div>
+            <div class="key b" id="KeyB">B</div>
+            <div class="key n" id="KeyN">N</div>
+            <div class="key m" id="KeyM">M</div>
+            <div class="key Comma" id="Comma">,</div>
+            <div class="key Period" id="Period">.</div>
+            <div class="key Slash" id="Slash">/</div>
+        </div>
+        <div class="keys-lane key spacekey" id="Space">
+            SPACE
+        </div>
     </div>
 </div>
-</div>
-<script type="module" src="/src/keyboard.js"></script>
+<%- include('pause.ejs') %>
+<script type="module" src="/src/scripts/keyboard.js"></script>
 <%- include('footer.ejs') %>
