added retry functionality

--- a/views/pause.ejs
+++ b/views/pause.ejs
@@ -1,20 +1,23 @@
  <div class="pause-container">
-     <div class="pause-text">
-         <form action="/menu" method="get" id="pauseRadioForms">
-             <ul>
-                 <li class="no-click">
-                     <input type="radio" name="pauseModes" id="choises" value="menu">
-                     <span class="o">[ ]</span>
-                     <span class="x">[x]</span>
-                     <label for="type">Other Choices</label>
+    <div class="pause-text">
+        <form action="/menu" method="post" id="pauseRadioForms">
+            <ul>
+                <!-- LOCALS HERE -->
+                <% if (locals.type) {%>
+                    <li class="no-click">
+                        <input type="radio" name="pauseModes" id="<%= locals.mode %>" value="<%= locals.mode %>">
+                        <span class="o">[ ]</span>
+                        <span class="x">[x]</span>
+                        <label for="type">Retry</label>
                     </li>
+                    <% } %>
                     <li class="no-click">
                         <input type="radio" name="pauseModes" id="menu" value="menu">
                         <span class="o">[ ]</span>
                         <span class="x">[x]</span>
                         <label for="type">Back to menu</label>
                     </li>
-                    <button type="submit" style="display: none;">SEND</button>
+                    <button type="submit" style="display: none;" >SEND</button>
                 </ul>
             </form>
             <div class="menu-label">
@@ -24,4 +27,4 @@
         <div class="blur">
             &nbsp;
         </div>
-</div>
+    </div>
