--- a/views/typing.ejs
+++ b/views/typing.ejs
@@ -11,7 +11,7 @@
                 <i class="fa-solid fa-rotate-right fa-xs"></i>
                 retry
             </div>
-            PRESS ESC TO EXIT
+            PRESS ESC
         </div>
     </div>
     <div class="text-area" id="textArea">
