added keyboard functionality

--- a/views/keyboard.ejs
+++ b/views/keyboard.ejs
@@ -42,8 +42,9 @@
             <div class="key Period" id="Period">.</div>
             <div class="key Slash" id="Slash">/</div>
         </div>
-        <div class="keys-lane key spacekey" id="Space">
-            SPACE
+        <div class="keys-lane key spacekey" id="Space">SPACE</div>
+        <div class="keyboard-label">
+            PRESS KEY
         </div>
     </div>
 </div>
