--- a/public/style/style.css
+++ b/public/style/style.css
@@ -88,9 +88,7 @@ body {
     margin: 3%;
 }
 
-
-
-.menu-label {
+.menu-label, .keyboard-label{
     text-align: center;
 
     font-size: var(--ff-size-secondary);
@@ -243,7 +241,7 @@ input[type=radio]:checked ~ .o  {
     border: 2px solid var(--key-primary);
     border-radius: 5px;
 
-    transition: 150ms;
+    transition: background-color 300ms ease-out;
 }
 
 .spacekey {
@@ -252,9 +250,22 @@ input[type=radio]:checked ~ .o  {
 
 .key-pressed {
     background-color: var(--key-bg-pressed);
-    transform:  scale(1.07);
-    transition: 150ms;
+    transform: scale(0.9);
+    transition: transform 10ms ease-in, backgroung-color 5ms, ease-out;
+}
 
+.key-correct {
+    background-color: green;
+    transition: background-color 5ms ease-in;
+}
+
+.key-incorrect {
+    background-color: red;
+    transition: background-color 5ms ease-in;
+}
+
+.keyboard-label {
+    margin-top: 10%;
 }
 
 /* FAKE CONTAINER >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
