--- a/views/fake.ejs
+++ b/views/fake.ejs
@@ -1,8 +1,10 @@
 <%- include('header.ejs') %>
 
 <div class="main-container">
-    <div class="fake-container">
-        PHONY!!
+    <div class="cont">
+        <div class="fake-container">
+
+        </div>
     </div>
 </div>
 
